# Digital-Twin-sample

./: .gitignore  GROUNDING_STRATEGY.md  README.md  WORKFLOW.md  api_server.py  eval_log.jsonl  eval_retrieval.py  eval_set.json  generate_eval.py  generate_synthetic_data.py  ingest_synthetic_data.py  main_ingest.py  pyproject.toml  query_cli.py  quick_fix.py  requirements.txt  retrieval_stats.json  test_bleed_full.py  test_grounding.py  test_persona_consistency.py  verify_checkpoint1.py  verify_checkpoint2.py  verify_checkpoint3.py
api/: __init__.py  eval_endpoints.py  models.py
core/: context_builder.py  eval_aggregator.py  generator.py  groundedness.py  identity.py  pdf_extractor.py  persona_consistency.py  retrieval_metrics.py  retriever.py  router.py
data/: gdrive_name_map.json  github_hash_store.json  skills.json  style.json  traits.json
data/sources/: nontechnical_interest_essay_Books That Changed How I Think.json  nontechnical_interest_essay_Dance: Discipline, Expression, and Performance.json  nontechnical_interest_essay_Easy Healthy Recipes Every Busy Student Should Know.json  nontechnical_interest_essay_What I've Learned from Strength Training.json  nontechnical_interest_essay_Why I Do Competitive Debate.json  nontechnical_life_experience_A Formative Team Experience: Leading Capella's Annual Production.json  nontechnical_life_experience_A Moment That Tested My Resilience.json  nontechnical_life_experience_Learning to Ask for Help: A Growth Edge in Action.json  nontechnical_opinion_piece_Navigating Career Ambiguity with Structured Thinking.json  nontechnical_opinion_piece_On Intellectual Honesty.json  nontechnical_opinion_piece_The Problem With Hype in Tech.json  nontechnical_personal_reflection_Confidence vs Uncertainty: The Motivational Tension.json  nontechnical_personal_reflection_Growth Edges I'm Working On.json  nontechnical_personal_reflection_My Relationship With High Standards.json  nontechnical_personal_reflection_What Drives Me: Competence and Mastery.json  technical_design_decision_Agent Reliability: Retries vs Guardrails.json  technical_design_decision_Chunking Strategy Tradeoffs: Sentence vs Fixed-Size vs Semantic.json  technical_design_decision_Embedding Model Selection for RAG: Balancing Cost and Quality.json  technical_design_decision_Why I Chose Qdrant Over Pinecone for the RAG Pipeline.json  technical_interview_qa_Interview Question: Describe a Technical Disagreement.json  technical_interview_qa_Interview Question: How Do You Evaluate ML Systems?.json  technical_interview_qa_Interview Question: Tell Me About a Complex System You Built.json  technical_project_writeup_000.json  technical_project_writeup_001.json  technical_project_writeup_002.json  technical_project_writeup_003.json  technical_project_writeup_004.json  technical_technical_explainer_000.json  technical_technical_explainer_001.json  technical_technical_explainer_002.json  technical_technical_explainer_003.json  technical_technical_explainer_004.json  technical_work_experience_004.json  technical_work_experience_Work Experience: Computer Vision Research and ML.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: client.js
ingest/: chunker.py  embedder.py  gdrive_hash_store.py  gdrive_reader.py  github_reader.py  hash_store.py  synthetic_hash_store.py  synthetic_reader.py
scripts/: export_doc_titles.py
utility/: delete_collection.py  generate_eval.py  generate_synthetic_data.py
(+27 files in other folders)
